--- a/.github/workflows/adobe.yml
+++ b/.github/workflows/adobe.yml
@@ -24,11 +24,23 @@ jobs:
           fi
           mv adobe.list Clash/
 
-      - name: 更新adobe.list
+      - name: Set up Git
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add Clash/adobe.list
-          git commit -m "Downloaded file on $(date "+%Y/%m/%d %H:%M:%S")"
+		  
+      - name: Add and commit changes
+        run: |
+          # Output the status to help debug
+          git status
+          # Add the file to staging area
+		  git add Clash/adobe.list
+		  # Output the diff to ensure there are changes
+          git diff --cached
+          # Commit the changes if any
+          git commit -m "Downloaded file on $(date "+%Y/%m/%d %H:%M:%S")" || echo "No changes to commit"
+
+      - name: 更新adobe.list
+        run: |
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{github.repository}}.git
-          git push
+          git push		  		  
